2004-09-29  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/subobj9.test: Adjust regexes after previous patch.

2004-09-28  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (handle_languages, define_compiler_variable): Output
	Libtool's --tag= option before --mode=compile, because depcomp use
	--mode=compile as end marker for libtool arguments.
	(define_linker_variable): Likewise before --mode=link, for
	uniformity.
	* tests/pr307.test: Make sure dependency files are updated.  That
	was not the case because depcomp thought `--tag=CC' was the
	compiler to get dependencies from.
	Report from Пухальский Юрий Андреевич.

2004-09-26  Alexandre Duret-Lutz  <adl@gnu.org>

	* configure.ac: Require Perl 5.6.
	* lib/Automake/Config.in: Require Perl 5.6 (not done in
	lib/Automake/General.pm because it is shared with Autoconf),
	and use `our' instead of `use vars'.
	* aclocal.in (rel2abs): Remove.
	(scan_configure_dep): Use File::Spec->rel2abs instead.

	* tests/compile.test, tests/instsh2.test, tests/instspc.test: Use
	two consecutive spaces in filename instead of one, to catch mistake
	like `echo $val | ...`.
	* tests/README: Suggest this.
	Suggested by Ralf Wildenhues.

2004-09-25  Alexandre Duret-Lutz  <adl@gnu.org>

	* doc/automake.texi (Clean): Document -local targets.

2004-09-25  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>

	* doc/automake.texi: Typos.

2004-09-21  Alexandre Duret-Lutz  <adl@gnu.org>

	* doc/automake.texi (Timeline): Typos and other English mistakes
	reported by Jim and Gary.

	* lib/Automake/VarDef.pm (append): Strip comments from augmented
	variables.
	* tests/comment8.test: New file.
	* tests/Makefile.am (TESTS): Add comment8.test.
	Report from Stepan Kasal.

2004-09-19  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/compile.test: Fix rm usage.

	* INSTALL, lib/INSTALL, lib/config.sub, lib/config.guess,
	lib/texinfo.tex: New upstream versions.

	* doc/automake.texi (Timeline): New node.  Thanks to Karl and Tom