@@ -801,12 +801,28 @@ register_language ('name' => 'asm',
 		   'config_vars' => ['CCAS', 'CCASFLAGS'],
 
 		   'flags' => ['CCASFLAGS'],
-		   # Users can set AM_ASFLAGS to includes DEFS, INCLUDES,
-		   # or anything else required.  They can also set AS.
+		   # Users can set AM_CCASFLAGS to include DEFS, INCLUDES,
+		   # or anything else required.  They can also set CCAS.
 		   'compile' => '$(CCAS) $(AM_CCASFLAGS) $(CCASFLAGS)',
 		   'compiler' => 'CCASCOMPILE',
 		   'compile_flag' => '-c',
-		   'extensions' => ['.s', '.S'],
+		   'extensions' => ['.s'],
+
+		   # With assembly we still use the C linker.
+		   '_finish' => \&lang_c_finish);
+
+# Preprocessed Assembler.
+register_language ('name' => 'cppasm',
+		   'Name' => 'Preprocessed Assembler',
+		   'config_vars' => ['CCAS', 'CCASFLAGS'],
+
+		   'flags' => ['CCASFLAGS','CPPFLAGS'],
+		   # Users can set AM_ASFLAGS to include DEFS, INCLUDES,
+		   # or anything else required.  They can also set CCAS.
+		   'compile' => '$(CCAS) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CCASFLAGS) $(CCASFLAGS)',
+		   'compiler' => 'CPPASCOMPILE',
+		   'compile_flag' => '-c',
+		   'extensions' => ['.S'],
 
 		   # With assembly we still use the C linker.
 		   '_finish' => \&lang_c_finish);
@@ -1386,7 +1402,7 @@ sub handle_languages
 					%transform, %lang);
 
 	# If the source to a program consists entirely of code from a
-	# `pure' language, for instance C++ for Fortran 77, then we
+	# `pure' language, for instance C++ or Fortran 77, then we
 	# don't need the C compiler code.  However if we run into
 	# something unusual then we do generate the C code.  There are
 	# probably corner cases here that do not work properly.
@@ -5186,6 +5202,12 @@ sub lang_lexxx_rewrite
 
 # Rewrite a single assembly file.
 sub lang_asm_rewrite
+{
+    return &lang_sub_obj;
+}
+
+# Rewrite a single preprocessed assembly file.
+sub lang_cppasm_rewrite
 {
     return &lang_sub_obj;
 }
